--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Log in!{% endblock %}
 
 {% block body %}
-    <form class="form" method="post">
+    <form class="form" method="post" action="{{ path('app_login') }}">
         {% if error %}
             <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') | e }}</div>
         {% endif %}
@@ -32,7 +32,6 @@
             <input type="password" name="_password" id="password" class="form-control" autocomplete="current-password" required>
         </div>
 
-        <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
         <div class="checkbox mb-3">
             <input type="checkbox" name="_remember_me" id="_remember_me">
@@ -41,6 +40,7 @@
 
         <div class="button-wrapper">
             <button class="button--dark-green" type="submit">
+        <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
                 Je me connecte
             </button>
         </div>
